# ts_imputer

./: .gitignore  LICENSE  README.md  pyproject.toml  ts_imputer.py  ts_imputer_example.ipynb
example/: Aggregate_Category_and_Subcategory_Scores_FIW_2003-2022.xlsx  ts_imputer_example.ipynb
src/: ts_imputer.py
src/tsimputer.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
